# quantilica-core

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/quantilica/core/: __init__.py  cache.py  cli.py  config.py  dates.py  exceptions.py  ftp.py  http.py  logging.py  metadata.py  progress.py  retry.py
src/quantilica_core/: cli.py  dates.py  fetcher.py  files.py  ftp.py  http.py  logging.py  manifests.py  metadata.py  platform.py  retry.py  storage.py
tests/: test_cache.py  test_cli.py  test_config.py  test_dates.py  test_fetcher.py  test_files.py  test_http.py  test_logging.py  test_manifests.py  test_metadata.py  test_platform.py  test_retry.py  test_storage.py
