[project]
name = "quantilica-core"
version = "0.3.1"
description = "Common foundation utilities for Quantilica data projects"
readme = "README.md"
authors = [
    { name = "Komesu, D.K.", email = "daniel@dkko.me" },
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = [
    "data",
    "open-data",
    "brazil",
    "quantilica",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
cli = [
    "rich>=13.0.0",
    "typer>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/Quantilica/quantilica-core"
Repository = "https://github.com/Quantilica/quantilica-core"
Issues = "https://github.com/Quantilica/quantilica-core/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-p", "no:cacheprovider"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.hatch.build.targets.wheel]
sources = ["src"]
packages = ["src/quantilica"]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"
